--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 <!-- shop section -->
 
-<section class="shop_section layout_padding">
+{% comment %} <section class="shop_section layout_padding">
   <div class="container">
     <div class="box">
       <div class="detail-box">
@@ -21,12 +21,12 @@
       </div>
     </div>
   </div>
-</section>
+</section> {% endcomment %}
 
 <!-- end shop section -->
 
 <!-- about section -->
-
+{% comment %} 
 <section class="about_section">
   <div class="container-fluid">
     <div class="row">
@@ -51,7 +51,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> {% endcomment %}
 
 <!-- end about section -->
 
@@ -66,48 +66,21 @@
   </div>
   <div class="container-fluid">
     <div class="fruit_container">
-      <div class="box">
-        <img src={% static 'images/f-1.jpg' %} alt="" />
+      {% for c in categories %}
+      <div class="box" style="
+      background-image: url({{c.picture.url}});
+      height: 460px;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      ">
+        {% comment %} <img src={{c.picture.url}} alt="" /> {% endcomment %}
         <div class="link_box">
-          <h5>Orange</h5>
+          <h5>{{c.category}}</h5>
           <a href=""> Buy Now </a>
         </div>
       </div>
-      <div class="box">
-        <img src={% static 'images/f-2.jpg' %} alt="" />
-        <div class="link_box">
-          <h5>Blueberry</h5>
-          <a href=""> Buy Now </a>
-        </div>
-      </div>
-      <div class="box">
-        <img src={% static 'images/f-3.jpg' %} alt="" />
-        <div class="link_box">
-          <h5>Banana</h5>
-          <a href=""> Buy Now </a>
-        </div>
-      </div>
-      <div class="box">
-        <img src={% static 'images/f-4.jpg' %} alt="" />
-        <div class="link_box">
-          <h5>Apple</h5>
-          <a href=""> Buy Now </a>
-        </div>
-      </div>
-      <div class="box">
-        <img src={% static 'images/f-5.jpg' %} alt="" />
-        <div class="link_box">
-          <h5>Mango</h5>
-          <a href=""> Buy Now </a>
-        </div>
-      </div>
-      <div class="box">
-        <img src={% static 'images/f-6.jpg' %} alt="" />
-        <div class="link_box">
-          <h5>Strawberry</h5>
-          <a href=""> Buy Now </a>
-        </div>
-      </div>
+      {% endfor %}
     </div>
   </div>
 </section>
