--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
       <!-- header section strats -->
       <div class="brand_box">
         <a class="navbar-brand" href={% url 'home' %}>
-          <span> BugssFood </span>
+          <span> Bugss<span>Food</span> </span>
         </a>
       </div>
       <!-- end header section -->
