--- a/templates/fruit.html
+++ b/templates/fruit.html
@@ -1,89 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}Menu{% endblock title %}
+{% block content %}
 
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-
-  <title>Ninom</title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
-</head>
-
-<body class="sub_page">
-  <div class="hero_area">
-    <!-- header section strats -->
-    <div class="brand_box">
-      <a class="navbar-brand" href="index.html">
-        <span>
-          Ninom
-        </span>
-      </a>
-    </div>
-    <!-- end header section -->
-  </div>
-
-  <!-- nav section -->
-
-  <section class="nav_section">
-    <div class="container">
-      <div class="custom_nav2">
-        <nav class="navbar navbar-expand custom_nav-container ">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex  flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="fruit.html">Our Fruit </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </section>
-
-  <!-- end nav section -->
 
   <!-- fruit section -->
 
@@ -92,79 +11,34 @@
       <div class="heading_container">
         <hr>
         <h2>
-          Fresh Fruit
+          {{category.category}}
         </h2>
       </div>
     </div>
     <div class="container-fluid">
 
       <div class="fruit_container">
-        <div class="box">
-          <img src="images/f-1.jpg" alt="">
-          <div class="link_box">
-            <h5>
-              Orange
+        {% for i in food_items %}
+        <div class="box" style='border: 1px solid #E8E2E2; padding: 12px 8px; border-radius: 5px;' >
+          <div class='wrapper' style="
+          "></div>
+          <img src={{i.picture.url}} alt="">
+          <div class="new_box">
+            <h5 class='mt-3'>
+              {{i.name}}
             </h5>
-            <a href="">
-              Buy Now
-            </a>
+            <p>{{i.about}}</p>
+            <p>Price: {{i.price}}$</p>
+            <div class='count d-flex'>
+              <button class='form-control ' id='sub-btn'>-</button>
+              <input class='form-control product-count-input' id='product-count' value=0></input>
+              <button class='form-control' id='add-btn'>+</button>
+            </div>
+            <button class='bg-success form-control mt-2'>Add to basket</button>
           </div>
         </div>
-        <div class="box">
-          <img src="images/f-2.jpg" alt="">
-          <div class="link_box">
-            <h5>
-              Blueberry
-            </h5>
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <img src="images/f-3.jpg" alt="">
-          <div class="link_box">
-            <h5>
-              Banana
-            </h5>
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <img src="images/f-4.jpg" alt="">
-          <div class="link_box">
-            <h5>
-              Apple
-            </h5>
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <img src="images/f-5.jpg" alt="">
-          <div class="link_box">
-            <h5>
-              Mango
-            </h5>
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <img src="images/f-6.jpg" alt="">
-          <div class="link_box">
-            <h5>
-              Strawberry
-            </h5>
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
+        {% endfor %}
+
       </div>
     </div>
   </section>
@@ -252,20 +126,27 @@
   <!-- end info section -->
 
 
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </section>
-  <!-- footer section -->
+  <script>
+    const countInputs = document.querySelectorAll('.product-count-input');
 
+    countInputs.forEach((input) => {
+      const addBtn = input.nextElementSibling;
+      const subBtn = input.previousElementSibling;
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
+      addBtn.addEventListener('click', () => {
+        const currentCount = parseInt(input.value);
+        if (currentCount <100){
+            input.value = currentCount + 1;
+        }
+      });
 
-</body>
+      subBtn.addEventListener('click', () => {
+        const currentCount = parseInt(input.value);
+        if (currentCount > 0) {
+          input.value = currentCount - 1;
+        }
+      });
+    });
+</script>
 
-</html>
+{% endblock content %}
