new model and added createview

--- a/templates/fruit.html
+++ b/templates/fruit.html
@@ -20,9 +20,20 @@
       <div class="fruit_container">
         {% for i in food_items %}
         <div class="box" style='border: 1px solid #E8E2E2; padding: 12px 8px; border-radius: 5px;' >
-          <div class='wrapper' style="
-          "></div>
-          <img src={{i.picture.url}} alt="">
+          <center>
+            <div class='wrapper' style="
+            width: 300px;
+            height: 250px;
+            background-image: url({{i.picture.url}});
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            ">
+                   {% comment %} <img src={{i.picture.url}} alt=""> {% endcomment %}
+        </div>
+          </center>
+
+   
           <div class="new_box">
             <h5 class='mt-3'>
               {{i.name}}
@@ -34,7 +45,7 @@
               <input class='form-control product-count-input' id='product-count' value=0></input>
               <button class='form-control' id='add-btn'>+</button>
             </div>
-            <button class='bg-success form-control mt-2'>Add to basket</button>
+            <button class='bg-success form-control mt-2' style='color: white;' >Add to basket</button>
           </div>
         </div>
         {% endfor %}
@@ -44,86 +55,6 @@
   </section>
 
   <!-- end fruit section -->
-
-
-  <!-- info section -->
-
-  <section class="info_section layout_padding">
-    <div class="container">
-      <div class="info_logo">
-        <h2>
-          NiNom
-        </h2>
-      </div>
-      <div class="info_contact">
-        <div class="row">
-          <div class="col-md-4">
-            <a href="">
-              <img src="images/location.png" alt="">
-              <span>
-                Passages of Lorem Ipsum available
-              </span>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a href="">
-              <img src="images/call.png" alt="">
-              <span>
-                Call : +012334567890
-              </span>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a href="">
-              <img src="images/mail.png" alt="">
-              <span>
-                demo@gmail.com
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-lg-9">
-          <div class="info_form">
-            <form action="">
-              <input type="text" placeholder="Enter your email">
-              <button>
-                subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-3">
-          <div class="info_social">
-            <div>
-              <a href="">
-                <img src="images/facebook-logo-button.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/twitter-logo-button.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/instagram.png" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- end info section -->
 
 
   <script>
