--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,21 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.cart__count {
+  position: absolute;
+  top: -6px;
+  right: -1px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  font-size: 14px;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: #040000;
@@ -34,7 +52,6 @@ body {
   background-image: url(../images/slider-img.jpg);
   padding: 45px 0;
 }
-
 .sub_page .nav_section {
   margin-top: 0;
   background-color: #252525;
@@ -46,14 +63,9 @@ body {
   left: 0;
   z-index: 9;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .brand_box .navbar-brand span {
   font-size: 34px;
   font-weight: bold;
@@ -75,8 +87,7 @@ a:focus {
 .btn,
 .btn:focus {
   outline: none !important;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .custom_nav-container {
@@ -102,11 +113,9 @@ a:focus {
 .slider_section div#carouselExampleControls {
   overflow: hidden;
 }
-
 .slider_section .img-box img {
   width: 100%;
 }
-
 .slider_section .carousel-control-prev,
 .slider_section .carousel-control-next {
   width: 90px;
@@ -114,24 +123,20 @@ a:focus {
   background-color: #252525;
   opacity: 1;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   background-repeat: no-repeat;
   background-size: 12px;
 }
-
 .slider_section .carousel-control-prev:hover,
 .slider_section .carousel-control-next:hover {
   opacity: 0.9;
 }
-
 .slider_section .carousel-control-prev {
   border-radius: 0 100% 100% 0;
   background-image: url(../images/prev.png);
   left: -50px;
   background-position: 58px center;
 }
-
 .slider_section .carousel-control-next {
   border-radius: 100% 0 0 100%;
   background-image: url(../images/next.png);
@@ -143,26 +148,20 @@ a:focus {
 .nav_section {
   margin-top: -32px;
 }
-
 .nav_section .custom_nav2 .custom_nav-container {
   padding: 10px 0;
   background-color: #252525;
   border-radius: 5px;
 }
-
 .nav_section .custom_nav2 .custom_nav-container .navbar-nav .nav-item .nav-link {
   padding: 10px 30px;
   color: #ffffff;
   text-align: center;
   position: relative;
 }
-
 .nav_section .custom_nav2 #navbarSupportedContent {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .nav_section .custom_nav-container .nav_search-btn {
   background-image: url(../images/search-icon.png);
   background-size: 18px;
@@ -176,37 +175,25 @@ a:focus {
 }
 
 .shop_section .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
-
 .shop_section .box .detail-box h2 {
   font-weight: bold;
   font-size: 3rem;
   text-transform: uppercase;
 }
-
 .shop_section .box .detail-box p {
   margin-bottom: 0;
 }
-
 .shop_section .box .img-box img {
   max-width: 100%;
 }
-
 .shop_section .box .btn-box {
   margin-top: 25px;
 }
-
 .shop_section .box .btn-box a {
   display: inline-block;
   padding: 8px 40px;
@@ -214,7 +201,6 @@ a:focus {
   border: 1px solid #313131;
   color: #ffffff;
 }
-
 .shop_section .box .btn-box a:hover {
   background-color: transparent;
   color: #313131;
@@ -224,31 +210,19 @@ a:focus {
   padding: 35px 0;
   background-color: #ececec;
 }
-
 .about_section .img-box img {
   width: 100%;
-  -webkit-transform: translateX(45px);
-          transform: translateX(45px);
+  transform: translateX(45px);
 }
-
 .about_section .detail-box {
   text-align: center;
   padding: 35px 45px;
 }
-
 .about_section .detail-box .heading_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 .about_section .detail-box .heading_container hr {
   width: 1px;
   height: 145px;
@@ -257,11 +231,9 @@ a:focus {
   background-color: #b7b7b7;
   margin-bottom: 10px;
 }
-
 .about_section .detail-box p {
   margin-top: 10px;
 }
-
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 40px;
@@ -270,22 +242,16 @@ a:focus {
   color: #ffffff;
   margin-top: 10px;
 }
-
 .about_section .detail-box a:hover {
   background-color: transparent;
   color: #313131;
 }
 
 .fruit_section .heading_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-bottom: 35px;
 }
-
 .fruit_section .heading_container hr {
   width: 20%;
   height: 1px;
@@ -294,35 +260,23 @@ a:focus {
   margin-right: 10px;
   background-color: #b7b7b7;
 }
-
 .fruit_section .heading_container h2 {
   margin: 0;
 }
-
 .fruit_section .fruit_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
 .fruit_section .fruit_container .box {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 31.33%;
-          flex: 0 0 31.33%;
+  flex: 0 0 31.33%;
   margin: 1%;
   position: relative;
   overflow: hidden;
 }
-
 .fruit_section .fruit_container .box img {
   width: 100%;
 }
-
 .fruit_section .fruit_container .box .link_box {
   position: absolute;
   left: 0;
@@ -332,28 +286,16 @@ a:focus {
   opacity: 0;
   background-color: #252525;
   color: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: all 0.3s;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   transition: all 0.3s;
 }
-
 .fruit_section .fruit_container .box .link_box h5 {
   text-transform: uppercase;
   margin-bottom: 25px;
 }
-
 .fruit_section .fruit_container .box .link_box a {
   display: inline-block;
   padding: 7px 35px;
@@ -361,29 +303,20 @@ a:focus {
   color: #ffffff;
   font-size: 15px;
 }
-
 .fruit_section .fruit_container .box .link_box a:hover {
   background-color: #ffffff;
   color: #000000;
 }
-
 .fruit_section .fruit_container .box:hover .link_box {
   top: 0;
   opacity: 0.9;
 }
 
 .client_section .heading_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .client_section .heading_container hr {
   width: 20%;
   height: 1px;
@@ -392,55 +325,39 @@ a:focus {
   margin-left: 10px;
   background-color: #b7b7b7;
 }
-
 .client_section .client_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   width: 85%;
   margin: auto;
 }
-
 .client_section .client_container .img-box {
   width: 175px;
   border-radius: 100%;
 }
-
 .client_section .client_container .img-box img {
   width: 100%;
 }
-
 .client_section .client_container .detail-box {
   margin-top: 25px;
 }
-
 .client_section .client_container .detail-box h5 {
   color: #1d1b28;
   margin-bottom: 15px;
 }
-
 .client_section .client_container .detail-box p {
   color: #1d1b28;
   margin: 20px;
 }
-
 .client_section .client_container .detail-box p img {
   width: 25px;
   margin: 3px 10px;
 }
-
 .client_section .client_container .detail-box img {
   width: 60px;
 }
-
 .client_section .carousel-control-prev,
 .client_section .carousel-control-next {
   width: 50px;
@@ -453,17 +370,14 @@ a:focus {
   background-position: center;
   background-size: 10px;
 }
-
 .client_section .carousel-control-prev:hover,
 .client_section .carousel-control-next:hover {
   background-color: #000000;
 }
-
 .client_section .carousel-control-prev {
   background-image: url(../images/prev.png);
   left: 15%;
 }
-
 .client_section .carousel-control-next {
   background-image: url(../images/next.png);
   right: 15%;
@@ -473,17 +387,11 @@ a:focus {
 .contact_section {
   position: relative;
 }
-
 .contact_section .heading_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-bottom: 35px;
 }
-
 .contact_section .heading_container hr {
   width: 20%;
   height: 1px;
@@ -492,20 +400,15 @@ a:focus {
   margin-right: 10px;
   background-color: #b7b7b7;
 }
-
 .contact_section .heading_container h2 {
   margin: 0;
 }
 
-.contact_section input::-webkit-input-placeholder {
+.contact_section input::-moz-placeholder {
   color: #000;
 }
 
 .contact_section input:-ms-input-placeholder {
-  color: #000;
-}
-
-.contact_section input::-ms-input-placeholder {
   color: #000;
 }
 
@@ -519,35 +422,24 @@ a:focus {
   height: 45px;
   width: 100%;
   margin: 10px 0;
-  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
   padding-left: 15px;
 }
-
-.contact_section input::-webkit-input-placeholder {
+.contact_section input::-moz-placeholder {
   color: #ac9784;
   text-transform: uppercase;
   font-size: 15px;
 }
-
 .contact_section input:-ms-input-placeholder {
   color: #ac9784;
   text-transform: uppercase;
   font-size: 15px;
 }
-
-.contact_section input::-ms-input-placeholder {
-  color: #ac9784;
-  text-transform: uppercase;
-  font-size: 15px;
-}
-
 .contact_section input::placeholder {
   color: #ac9784;
   text-transform: uppercase;
   font-size: 15px;
 }
-
 .contact_section input.message_input {
   height: 100px;
 }
@@ -569,7 +461,6 @@ a:focus {
 .map_container {
   height: 350px;
 }
-
 .map_container .map-responsive {
   height: 100%;
 }
@@ -580,97 +471,66 @@ a:focus {
   background-color: #2e2e2e;
   color: #ffffff;
 }
-
 .info_section h6 {
   font-weight: bold;
 }
-
 .info_section .info_logo h2 {
   font-size: 2.5rem;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
 }
-
 .info_section .info_contact {
   margin-top: 60px;
   margin-bottom: 45px;
 }
-
 .info_section .info_contact .col-md-4 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .info_section .info_contact a {
   color: #ffffff;
 }
-
 .info_section .info_contact img {
   max-width: 100%;
   margin-right: 10px;
 }
-
 .info_section .info_form {
   margin: 0 auto;
   margin-bottom: 45px;
 }
-
 .info_section .info_form h4 {
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 20px;
 }
-
 .info_section .info_form form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .info_section .info_form form input {
   background-color: #ffffff;
   border: none;
-  -webkit-box-flex: 2.5;
-      -ms-flex: 2.5;
-          flex: 2.5;
+  flex: 2.5;
   outline: none;
   color: #000000;
   min-height: 42.4px;
   padding-left: 15px;
 }
-
-.info_section .info_form form input ::-webkit-input-placeholder {
+.info_section .info_form form input ::-moz-placeholder {
   color: #ffffff;
   opacity: 0.2;
 }
-
 .info_section .info_form form input :-ms-input-placeholder {
   color: #ffffff;
   opacity: 0.2;
 }
-
-.info_section .info_form form input ::-ms-input-placeholder {
-  color: #ffffff;
-  opacity: 0.2;
-}
-
 .info_section .info_form form input ::placeholder {
   color: #ffffff;
   opacity: 0.2;
 }
-
 .info_section .info_form form button {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   display: inline-block;
   padding: 9px 30px;
   background-color: #f89e12;
@@ -679,24 +539,16 @@ a:focus {
   font-size: 15px;
   text-transform: uppercase;
 }
-
 .info_section .info_form form button:hover {
   background-color: transparent;
   color: #f89e12;
 }
-
 .info_section .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .info_section .info_social {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .info_section .info_social img {
   width: 35px;
   margin-right: 8px;
@@ -719,5 +571,4 @@ a:focus {
   color: #222222;
 }
 
-/* end footer section*/
-/*# sourceMappingURL=style.css.map */
+/* end footer section*//*# sourceMappingURL=style.css.map */
