--- a/templates/base.html
+++ b/templates/base.html
@@ -68,17 +68,6 @@
               </div>
             </div>
             {% endfor %}
-            {% comment %} <div class="carousel-item">
-              <div class="img-box">
-                <img src={% static 'images/slider-img.jpg' %} alt="" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="img-box">
-                <img src={% static 'images/slider-img.jpg' %} alt="" />
-              </div>
-            </div>
-          </div> {% endcomment %}
           <a
             class="carousel-control-prev"
             href="#carouselExampleControls"
@@ -122,7 +111,7 @@
               <div class="d-flex flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="index.html"
+                    <a class="nav-link" href={% url 'home' %}
                       >Home <span class="sr-only">(current)</span></a
                     >
                   </li>
@@ -141,15 +130,25 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
                   </li>
+                  <li class="nav-item" style='align-self: center;  padding: 0 15px;
+                  color: #ffffff;
+                  text-align: center;
+                  position: relative;'>
+                  <div class='cart__count'>0</div>
+                    <a href=''>
+                      <image src={% static 'images/basket-white.png' %} width=30px height: 30px;>
+
+                    </a> 
+                  </li>
                 </ul>
-                <form
+                {% comment %} <form
                   class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0"
                 >
                   <button
                     class="btn my-2 my-sm-0 nav_search-btn"
                     type="submit"
                   ></button>
-                </form>
+                </form> {% endcomment %}
               </div>
             </div>
           </nav>
@@ -162,11 +161,45 @@
     <!-- shop section -->
     {% block content %}{% endblock content %}
 
+
+    <!-- info section -->
+
+<section class="info_section layout_padding">
+  <div class="container">
+    <div class="info_logo">
+      <h2>NiNom</h2>
+    </div>
+    <div class="info_contact">
+      <div class="row">
+        <div class="col-md-4">
+          <a href="">
+            <img src={% static 'images/location.png' %} alt="" />
+            <span> {{data.location}}</span>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="">
+            <img src={% static 'images/call.png' %} alt="" />
+            <span> Call : {{data.phone}} </span>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="">
+            <img src={% static 'images/mail.png' %} alt="" />
+            <span> {{data.mail}} </span>
+          </a>
+        </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- end info section -->
+
     <!-- footer section -->
     <section class="container-fluid footer_section">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved. Design by
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved.
       </p>
     </section>
     <!-- footer section -->
