--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,8 @@
         {% comment %} <img src={{c.picture.url}} alt="" /> {% endcomment %}
         <div class="link_box">
           <h5>{{c.category}}</h5>
-          <a href={% url 'food_by_category' c.id %}> Buy Now </a>
+          {% comment %} <a href={% url 'food_by_category' c.pk %}> Buy Now </a> {% endcomment %}
+          <a href={% url 'detail' c.pk %}> Buy Now </a>
         </div>
       </div>
       {% endfor %}
@@ -92,7 +93,7 @@
 <section class="client_section layout_padding-bottom">
   <div class="container">
     <div class="heading_container">
-      <h2>What Syas Cutomer</h2>
+      <h2>Our customers</h2>
       <hr />
     </div>
     <div
@@ -199,24 +200,26 @@
     <div class="layout_padding2-top">
       <div class="row">
         <div class="col-lg-4 offset-lg-2 col-md-5 offset-md-1">
-          <form action="">
+          <form action="" method='POST'>
+            {% csrf_token %}
             <div class="contact_form-container">
               <div>
                 <div>
-                  <input type="text" placeholder="Full Name" />
+                  {% comment %} <input type="text" placeholder="Full Name" /> {% endcomment %}
+                  {{form.name}}
+                </div>
+           
+                <div>
+                  {% comment %} <input type="text" placeholder="Phone Number" /> {% endcomment %}
+                  {{form.phone}}
                 </div>
                 <div>
-                  <input type="email" placeholder="Email" />
-                </div>
-                <div>
-                  <input type="text" placeholder="Phone Number" />
-                </div>
-                <div>
-                  <input
+                  {% comment %} <input
                     type="text"
                     class="message_input"
                     placeholder="Message"
-                  />
+                  /> {% endcomment %}
+                  {{form.message}}
                 </div>
                 <div>
                   <button type="submit">Send</button>
@@ -228,14 +231,15 @@
         <div class="col-md-6 px-0">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe
+              {% comment %} <iframe
                 src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
                 width="600"
                 height="300"
                 frameborder="0"
                 style="border: 0; width: 100%; height: 100%"
                 allowfullscreen
-              ></iframe>
+              ></iframe> {% endcomment %}
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2997.126421437279!2d69.2819121157252!3d41.30611330899188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b71790fb19d%3A0x3200873b75e5132f!2sIT%20Step%20Academy!5e0!3m2!1sru!2sus!4v1676621112056!5m2!1sru!2sus"  style="border:0; width: 100%; height: 100%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -245,72 +249,6 @@
 </section>
 <!-- end contact section -->
 
-<!-- info section -->
 
-<section class="info_section layout_padding">
-  <div class="container">
-    <div class="info_logo">
-      <h2>NiNom</h2>
-    </div>
-    <div class="info_contact">
-      <div class="row">
-        <div class="col-md-4">
-          <a href="">
-            <img src={% static 'images/location.png' %} alt="" />
-            <span> Passages of Lorem Ipsum available </span>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="">
-            <img src={% static 'images/call.png' %} alt="" />
-            <span> Call : +012334567890 </span>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="">
-            <img src={% static 'images/mail.png' %} alt="" />
-            <span> demo@gmail.com </span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-8 col-lg-9">
-        <div class="info_form">
-          <form action="">
-            <input type="text" placeholder="Enter your email" />
-            <button>subscribe</button>
-          </form>
-        </div>
-      </div>
-      <div class="col-md-4 col-lg-3">
-        <div class="info_social">
-          <div>
-            <a href="">
-              <img src={% static 'images/facebook-logo-button.png' %} alt="" />
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <img src={% static 'images/twitter-logo-button.png' %} alt="" />
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <img src={% static 'images/linkedin.png' %} alt="" />
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <img src={% static 'images/instagram.png' %} alt="" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- end info section -->
 
 {% endblock content %}
